# bm-lrs

./: Dockerfile.init  Dockerfile.server  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
client/: client.py  client_rni.py  test_client.py
client/testdata/: rni_sample.geojson
cmd/init/: main.go
cmd/lrs-server/: main.go
loadtest/: README.md  analyze_results.py  generate_test_data.py  load_test.js  monitor_remote.sh  smoke_test.js  spike_test.js  stress_test.js
loadtest/monitoring/: .env.example  docker-compose.yml
loadtest/monitoring/prometheus/: prometheus.yml
loadtest/monitoring/scripts/: backup_grafana.sh  start_monitoring.sh  stop_monitoring.sh
loadtest/results/: 2026-03-26-load-test-results.md  load-test-results.json
lrs-client/: README.md  pyproject.toml
lrs-client/src/bm_lrs_client/: __init__.py  client.py  exceptions.py  models.py  utils.py
lrs-client/tests/: test_client.py  test_models.py  test_utils.py
pkg/api/: handler.go  handler_test.go  server.go
pkg/config/: feature_flags.go
pkg/flight/: batch_handler.go  server.go  server_test.go  service.go
pkg/geom/: geom.go  points.go  points_test.go
pkg/mvalue/: mvalue.go  mvalue_test.go
pkg/projection/: project.go  project_test.go
pkg/route/: batch.go  batch_test.go  esri_json.go  repo.go  repo_test.go  route.go  route_test.go
pkg/route/testdata/: arcgis_fetched_debug.json  lrs_01001.json  lrs_01001_linestr.parquet  lrs_01001_point.parquet  (+3 more)
pkg/route_event/: geojson.go  geojson_test.go  route_event.go  route_event_test.go
plan/: st-interpolate-point-refactor.md
(+3 files in other folders)
