[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bm-lrs-client"
version = "0.1.0"
description = "Python client for BM-LRS server via Arrow Flight"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=23.0.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py310"
